--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="text" class="form-control" placeholder="Clinton" id="citySearch" aria-label="city"
                     aria-describedby="search" />
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary search-btn" type="button">
+                    <button class="btn btn-outline-secondary" id = "search-button" type="button">
                         Search
                     </button>
                 </div>
@@ -35,6 +35,9 @@
                 Clear Previous Search
             </button>
             <div id="previousSearch"></div>
+            <ul id = "saved-searches">
+
+            </ul>
         </div>
         <div class="card hidden" id="weather-card" style="min-width: 60rem;">
             <div class="card-body">
@@ -52,71 +55,70 @@
                 <li class="list-group-item uv-index"></li>
             </ul>
         </div>
-        <h1 class="forecast-header hidden" id="card-header">Five day forecast:</h1>
-        <div class="forecast-container">
-            <div class="card text-white bg-info mb-3 forecast-cards hidden" style="max-width: 18rem;">
-                <div class="card-header forecast-date"></div>
-                <div class="card-body">
-                    <div class="icon-container-forcast">
-                        <img id="weather-icon-one" src="" alt="wx icon">
-                    </div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+        <div id="days5" class="container-fluid">
+            <div class="row row-col-5 offset-sm-2">
+                <div class="col-12 offset-sm-2">
+                  <br>
+                  <h3 id="forcast5Title">5-day forcast</h3>
+                  <br>
+                  <div class="row">
+                    <card class="col-2 card offset-sm-2" id="day1">
+                      <h4 id="dayForecast1">day</h4>
+                      <br>
+                      <p id="icon1">icon</p>
+                      <p id="temp1">temp</p>
+                      <p id="wind1">wind</p>
+                      <p id="humidity1">humidity</p>
+                    </card>
+                    <card class="col-2 card" id="day2">
+                      <h4 id="dayForecast2">day</h4>
+                      <br>
+                      <p id='icon2'>icon</p>
+                      <p id='temp2'>temp</p>
+                      <p id='wind2'>wind</p>
+                      <p id='humidity2'>humidity</p>
+                    </card>
+                    <card class="col-2 card" id="day3">
+                      <h4 class="dayForecase3">day</h4>
+                      <br>
+                      <p id='icon3'>icon</p>
+                        <p id='temp3'>temp</p>
+                        <p id='wind3'>wind</p>
+                        <p id='humidity3'>humidity</p>
+                    </card> 
+                    <card class="col-2 card" id="day4">
+                      <h4 class="dayForecast4">day</h4>
+                      <br>
+                      <p id='icon4'>icon</p>
+                      <p id='temp4'>temp</p>
+                      <p id='wind4'>wind</p>
+                      <p id='humidity4'>humidity</p>
+                    </card>
+                    <card class="col-2 card" id="day5">
+                      <h4 id="dayForecast5">day</h4>
+                      <br>
+                      <p id='icon5'>icon</p>
+                      <p id='temp5'>temp</p>
+                      <p id='wind5'>wind</p>
+                      <p id='humidity5'>humidity</p>
+                    </card>
+                    </div>  
+                  </div>  
                 </div>
+              </div>
             </div>
-            <div class="card text-white bg-info mb-3 forecast-cards hidden" style="max-width: 18rem;">
-                <div class="card-header forecast-date"></div>
-                <div class="card-body">
-                    <div class="icon-container-forcast">
-                        <img id="weather-icon-one" src="" alt="wx icon">
-                    </div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-            </div>
-            <div class="card text-white bg-info mb-3 forecast-cards hidden" style="max-width: 18rem;">
-                <div class="card-header forecast-date"></div>
-                <div class="card-body">
-                    <div class="icon-container-forcast">
-                        <img id="weather-icon-one" src="" alt="wx icon">
-                    </div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-            </div>
-            <div class="card text-white bg-info mb-3 forecast-cards hidden" style="max-width: 18rem;">
-                <div class="card-header forecast-date"></div>
-                <div class="card-body">
-                    <div class="icon-container-forcast">
-                        <img id="weather-icon-one" src="" alt="wx icon">
-                    </div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-            </div>
-            <div class="card text-white bg-info mb-3 forecast-cards hidden" style="max-width: 18rem;">
-                <div class="card-header forecast-date"></div>
-                <div class="card-body">
-                    <div class="icon-container-forcast">
-                        <img id="weather-icon-one" src="" alt="wx icon">
-                    </div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-            </div>
-        </div>
+          </div>
+          
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
             integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
         </script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
         </script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="./assets/script.js"></script>
 </body>
 
