--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
                 </div>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item temp"></li>
-                <li class="list-group-item high-temp"></li>
-                <li class="list-group-item low-temp"></li>
+                <li class="list-group-item current-temp"></li>
                 <li class="list-group-item wind"></li>
                 <li class="list-group-item humidity"></li>
                 <li class="list-group-item uv-index"></li>
             </ul>
         </div>
-        <div id="days5" class="container-fluid">
+        <div id="days5" class="container-fluid hidden">
             <div class="row row-col-5 offset-sm-2">
                 <div class="col-12 offset-sm-2">
                   <br>
@@ -63,44 +61,44 @@
                   <br>
                   <div class="row">
                     <card class="col-2 card offset-sm-2" id="day1">
-                      <h4 id="dayForecast1">day</h4>
+                      <h4 id="dayForecast1"></h4>
                       <br>
-                      <p id="icon1">icon</p>
-                      <p id="temp1">temp</p>
-                      <p id="wind1">wind</p>
-                      <p id="humidity1">humidity</p>
+                      <p id="icon1"></p>
+                      <p id="temp1"></p>
+                      <p id="wind1"></p>
+                      <p id="humidity1"></p>
                     </card>
                     <card class="col-2 card" id="day2">
-                      <h4 id="dayForecast2">day</h4>
+                      <h4 id="dayForecast2"></h4>
                       <br>
-                      <p id='icon2'>icon</p>
-                      <p id='temp2'>temp</p>
-                      <p id='wind2'>wind</p>
-                      <p id='humidity2'>humidity</p>
+                      <p id='icon2'></p>
+                      <p id='temp2'></p>
+                      <p id='wind2'></p>
+                      <p id='humidity2'></p>
                     </card>
                     <card class="col-2 card" id="day3">
-                      <h4 class="dayForecase3">day</h4>
+                      <h4 class="dayForecase3"></h4>
                       <br>
-                      <p id='icon3'>icon</p>
-                        <p id='temp3'>temp</p>
-                        <p id='wind3'>wind</p>
-                        <p id='humidity3'>humidity</p>
+                      <p id='icon3'></p>
+                        <p id='temp3'></p>
+                        <p id='wind3'></p>
+                        <p id='humidity3'></p>
                     </card> 
                     <card class="col-2 card" id="day4">
-                      <h4 class="dayForecast4">day</h4>
+                      <h4 class="dayForecast4"></h4>
                       <br>
-                      <p id='icon4'>icon</p>
-                      <p id='temp4'>temp</p>
-                      <p id='wind4'>wind</p>
-                      <p id='humidity4'>humidity</p>
+                      <p id='icon4'></p>
+                      <p id='temp4'></p>
+                      <p id='wind4'></p>
+                      <p id='humidity4'></p>
                     </card>
                     <card class="col-2 card" id="day5">
-                      <h4 id="dayForecast5">day</h4>
+                      <h4 id="dayForecast5"></h4>
                       <br>
-                      <p id='icon5'>icon</p>
-                      <p id='temp5'>temp</p>
-                      <p id='wind5'>wind</p>
-                      <p id='humidity5'>humidity</p>
+                      <p id='icon5'></p>
+                      <p id='temp5'></p>
+                      <p id='wind5'></p>
+                      <p id='humidity5'></p>
                     </card>
                     </div>  
                   </div>  
