--- a/index.html
+++ b/index.html
@@ -54,51 +54,51 @@
             </ul>
         </div>
         <div id="days5" class="container-fluid hidden">
-            <div class="row row-col-5 offset-sm-2">
+            <div class="row row-col-5 offset-sm-2 forecast-cards">
                 <div class="col-12 offset-sm-2">
                   <br>
                   <h3 id="forcast5Title">5-day forcast</h3>
                   <br>
                   <div class="row">
-                    <card class="col-2 card offset-sm-2" id="day1">
-                      <h4 id="dayForecast1"></h4>
+                    <card class="col-2 card offset-sm-2">
+                      <h4></h4>
                       <br>
-                      <p id="icon1"></p>
-                      <p id="temp1"></p>
-                      <p id="wind1"></p>
-                      <p id="humidity1"></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
                     </card>
-                    <card class="col-2 card" id="day2">
-                      <h4 id="dayForecast2"></h4>
+                    <card class="col-2 card">
+                      <h4></h4>
                       <br>
-                      <p id='icon2'></p>
-                      <p id='temp2'></p>
-                      <p id='wind2'></p>
-                      <p id='humidity2'></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
                     </card>
-                    <card class="col-2 card" id="day3">
-                      <h4 class="dayForecase3"></h4>
+                    <card class="col-2 card">
+                      <h4></h4>
                       <br>
-                      <p id='icon3'></p>
-                        <p id='temp3'></p>
-                        <p id='wind3'></p>
-                        <p id='humidity3'></p>
+                      <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
                     </card> 
-                    <card class="col-2 card" id="day4">
-                      <h4 class="dayForecast4"></h4>
+                    <card class="col-2 card">
+                      <h4></h4>
                       <br>
-                      <p id='icon4'></p>
-                      <p id='temp4'></p>
-                      <p id='wind4'></p>
-                      <p id='humidity4'></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
                     </card>
-                    <card class="col-2 card" id="day5">
-                      <h4 id="dayForecast5"></h4>
+                    <card class="col-2 card">
+                      <h4></h4>
                       <br>
-                      <p id='icon5'></p>
-                      <p id='temp5'></p>
-                      <p id='wind5'></p>
-                      <p id='humidity5'></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
+                      <p></p>
                     </card>
                     </div>  
                   </div>  
