--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="text" class="form-control" placeholder="Clinton" id="citySearch" aria-label="city"
                     aria-describedby="search" />
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" id = "search-button" type="button">
+                    <button class="btn btn-outline-secondary" id="search-button" type="button">
                         Search
                     </button>
                 </div>
@@ -35,13 +35,14 @@
                 Clear Previous Search
             </button>
             <div id="previousSearch"></div>
-            <ul id = "saved-searches">
+            <ul id="saved-searches">
 
             </ul>
         </div>
         <div class="card hidden" id="weather-card" style="min-width: 60rem;">
             <div class="card-body">
-                <h5 class="card-title city-name"></h5>
+                <h1 class="card-title city-name"></h1>
+                <h3 class = "city-date"></h3>
                 <div class="icon-container">
                     <img id="weather-icon" src="" alt="wx icon">
                 </div>
@@ -53,71 +54,24 @@
                 <li class="list-group-item uv-index"></li>
             </ul>
         </div>
-        <div id="days5" class="container-fluid hidden">
-            <div class="row row-col-5 offset-sm-2 forecast-cards">
+        <div id="card-hide" class="container-fluid hidden">
+            <div class="row offset-sm-4 forecast-cards">
                 <div class="col-12 offset-sm-2">
-                  <br>
-                  <h3 id="forcast5Title">5-day forcast</h3>
-                  <br>
-                  <div class="row">
-                    <card class="col-2 card offset-sm-2">
-                      <h4></h4>
-                      <br>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                    </card>
-                    <card class="col-2 card">
-                      <h4></h4>
-                      <br>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                    </card>
-                    <card class="col-2 card">
-                      <h4></h4>
-                      <br>
-                      <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </card> 
-                    <card class="col-2 card">
-                      <h4></h4>
-                      <br>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                    </card>
-                    <card class="col-2 card">
-                      <h4></h4>
-                      <br>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                      <p></p>
-                    </card>
-                    </div>  
-                  </div>  
+                    <h3 class = "forecast-header">5-day forcast:</h3>
+                    <div class="row five-day-cards">
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
-            integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-        </script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-        </script>
-        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-        <script src="./assets/script.js"></script>
+        </div>
+    </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
